; ModuleID = '/home/carl/AnghaBench/git/vcs-svn/extr_svndump.c_svndump_init_fd.c'
source_filename = "/home/carl/AnghaBench/git/vcs-svn/extr_svndump.c_svndump_init_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@input = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"cannot open fd %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @svndump_init_fd(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @xdup(i32 %6)
  %8 = call i64 @buffer_fdinit(i32* @input, i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @error_errno(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %11)
  store i32 %12, i32* %3, align 4
  br label %17

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @xdup(i32 %14)
  %16 = call i32 @init(i32 %15)
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %13, %10
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i64 @buffer_fdinit(i32*, i32) #1

declare dso_local i32 @xdup(i32) #1

declare dso_local i32 @error_errno(i8*, i32) #1

declare dso_local i32 @init(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
